# Di-quark-pythia

./: .cursorignore  .gitignore  ANCESTOR_LIST_EVENT_30.md  ANCESTRY_TRACING_ALGORITHM.md  DIS_V3_EVENT_GENERATION_AND_JET_HADRON_OBSERVABLES_FOR_CHATGPT.md  ETA_CONFIG_CHECKLIST.md  HARD_INTERACTION_PARTON_ANCESTORS_EVENT_1.md  JET_HADRON_FINAL_STATE_PARQUET_SUMMARY_FOR_CHATGPT.md  JET_HADRON_OVERVIEW_FOR_CHATGPT.md  MODERATE_STATISTICS_VALIDATION_REPORT.md  PYTHIA_COLOR_REMNANT_METHODS_FOR_CHATGPT.md  PYTHIA_REMNANT_DEBUG.md  README.md  REMNANT_BRANCH_NEXT_STEP_VALIDATION_PLAN.md  REMNANT_BRANCH_TRACING_OVERVIEW_FOR_CHATGPT.md  REMNANT_BREIT_HEMISPHERE_SUMMARY.md  Sensitivity.nb  TARGET_PION_ANCESTRY_EXAMPLES.md  TARGET_PION_COLOR_FLOW_REPORT.md  TARGET_PION_COLOR_FLOW_REPORT_LOWLEVEL_SUMMARY.md  TARGET_PION_COLOR_REMNANT_MULTIPLICITY_LOWLEVEL_SUMMARY.md  TARGET_PION_COLOR_REMNANT_MULTIPLICITY_REPORT.md  TARGET_PION_FILTERED_COLOR_REMNANT_LOWLEVEL_SUMMARY.md  TARGET_PION_FILTERED_COLOR_REMNANT_REPORT.md  TARGET_PION_REMNANT_ANCESTRY_REPORT.md  TARGET_PION_REMNANT_ANCESTRY_REPORT_LOWLEVEL_SUMMARY.md  TARGET_PION_TO_HARD_VERTEX_SUMMARY.md  breit_frame_audit_report.txt  jet_hadron_transverse_metadata.txt  pyproject.toml
analysis/dis_stratified_20k_ab/: leading_pi_pm_by_channel.json  pi_pm_by_channel.json
analysis/dis_us_sbar_1M/: PIPELINE_BACKWARD_TRACE_FOR_CHATGPT.md  (+1 more)
analysis/popf_quark_selection_test/: event_dump.json  (+4 more)
notebooks/: Decorrelation.ipynb  di-hadron.ipynb  generate_pdf_plots.ipynb  generate_pdf_plots_new.ipynb
scripts/: setup_data_root.sh
(+109 files in other folders)
