[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diquark-pythia"
version = "0.1.0"
description = "PYTHIA 8 analysis for di-hadron and TMD physics in DIS"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
pythia = ["pythia8"]

[tool.setuptools.packages.find]
where = ["src"]
